[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suhteita"
version = "2022.8.17"
description = "Relationships (Finnish: suhteita) maintained across distances as load test core."
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["developer-tools", "validation", "verification"]
dependencies = [
    "atlassian-python-api >= 3.26.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "coverage", "flake8", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "types-jmespath"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/suhteita"
Bug-Tracker = "https://todo.sr.ht/~sthagen/suhteita"
Documentation = "https://codes.dilettant.life/docs/suhteita"
Source-Code = "https://git.sr.ht/~sthagen/suhteita"
Test-Coverage = "https://codes.dilettant.life/coverage/suhteita"

[project.scripts]
suhteita = "suhteita.cli:main"

#[tool.setuptools.packages.find]
#exclude = ["test*"]

[bdist_wheel]
universal = "True"

[tool.black]
line-length = 120
skip-string-normalization = "True"
target-version = ["py38", "py39", "py310"]
