[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suhteita"
version = "2022.8.28"
description = "Relationships (Finnish: suhteita) maintained across distances as load test core."
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["developer-tools", "validation", "verification"]
dependencies = [
    "atlassian-python-api >= 3.27.0",
    "jmespath >= 1.0.1",
    "robotframework >= 5.0.1",
    "wrapt >= 1.14.1",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "coverage", "flake8", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "types-jmespath"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/suhteita"
Bug-Tracker = "https://todo.sr.ht/~sthagen/suhteita"
Documentation = "https://codes.dilettant.life/docs/suhteita"
Source-Code = "https://git.sr.ht/~sthagen/suhteita"
Test-Coverage = "https://codes.dilettant.life/coverage/suhteita"

[project.scripts]
suhteita = "suhteita.cli:main"

[tool.setuptools.packages.find]
include = ["suhteita", "suhteita.robot", "suhteita.robot.TicketSystemLibrary"]
exclude = ["test*"]

[bdist_wheel]
universal = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py38", "py39", "py310"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/__main__.py",
]

[tool.isort]
line_length = 120
known_first_party = "suhteita"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"
